tests/snapshots/docx/pandoc/custom-style-reference.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "This is some text." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "This is text with an " },
    Text { content: "emphasized" },
    Text { content: " text style. And this is text with a " },
    Text { content: "strengthened" },
    Text { content: " text style." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    StartBlockQuote { id: None },
    Text { content: "Here is a styled " },
    Text { content: "paragr" },
    Text { content: "aph" },
    Text { content: " that inherits from Block Text." },
    EndBlockQuote,
    EndDocument,
  ],
  terminal: Ok,
}
