tests/snapshots/docx/pandoc/dummy_item_after_list_item.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
assertion_line: 56
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
       0: StartDocument { id: None, language: None, metadata: None }
       1: StartOrderedListItem { id: Some("7"), level: 0, start: Some(1), style_type: Decimal }
       2: StartParagraph { alignment: None, id: None }
       3: Text { content: "One" }
       4: EndParagraph
       5: EndOrderedListItem
       6: StartParagraph { alignment: None, id: None }
       7: Text { content: "Two" }
       8: LineBreak
       9: LineBreak
      10: Text { content: "Three" }
      11: EndParagraph
      12: EndDocument
  ],
  terminal: Ok,
}
