tests/snapshots/docx/pandoc/dummy_item_after_paragraph.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "First bullet point created and then deleted" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "A normal paragraph" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "First bullet point created and then deleted after the normal paragraph" },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
