tests/snapshots/docx/pandoc/empty_field.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "希望深入了解的读者可以去看" },
    Text { content: "David French" },
    Text { content: " Belding" },
    Text { content: "和" },
    Text { content: "Kevin J. Mitchell" },
    Text { content: "的" },
    Text { content: "Foundations of Analysis, 2nd Edition" },
    Text { content: "," },
    Text { content: "可从19页" },
    Text { content: "看起" },
    Text { content: "，" },
    Text { content: "或" },
    Text { content: "D.C. " },
    Text { content: "Goldrei" },
    Text { content: "的" },
    Text { content: " " },
    StartLink { href: "https://books.google.ae/books?id=dlc0DwAAQBAJ&lpg=PT29&hl=zh-CN&pg=PT26", id: None, title: None },
    Text { content: "Classic Set Theory: For Guided Independent Study" },
    EndLink,
    Text { content: "，从" },
    Text { content: "第" },
    Text { content: "二章" },
    Text { content: "看起" },
    Text { content: "，" },
    Text { content: "阅读" },
    Text { content: "时" },
    Text { content: "要注意" },
    Text { content: "本文与" },
    Text { content: "这些" },
    Text { content: "书所不同的是" },
    Text { content: "并没有把" },
    Text { content: "实数看作是有理数集的分割" },
    Text { content: "。" },
    EndParagraph,
    StartParagraph { alignment: Some(Left), id: None },
    LineBreak,
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Index:" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "French" },
    Text { content: ", 1" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    EndParagraph,
    EndDocument,
  ],
  terminal: Ok,
}
