tests/snapshots/docx/pandoc/german_styled_lists.docx.snap
---
source: crates/docspec-docx-reader/tests/snapshots.rs
expression: from_reader_snapshot
---
ReaderFixtureSnapshot {
  events: [
    StartDocument { id: None, language: None, metadata: None },
    StartParagraph { alignment: None, id: None },
    Text { content: "One" },
    Text { content: " " },
    Text { content: "level" },
    Text { content: " " },
    Text { content: "of" },
    Text { content: " " },
    Text { content: "the" },
    Text { content: " " },
    Text { content: "list" },
    Text { content: "." },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Second " },
    Text { content: "level" },
    Text { content: " " },
    Text { content: "of" },
    Text { content: " " },
    Text { content: "the" },
    Text { content: " " },
    Text { content: "list" },
    Text { content: "." },
    EndParagraph,
    StartUnorderedListItem { id: Some("1"), level: 0, style_type: Disc },
    StartUnorderedListItem { id: Some("1"), level: 1, style_type: Disc },
    StartParagraph { alignment: None, id: None },
    Text { content: "Next " },
    Text { content: "level" },
    Text { content: " " },
    Text { content: "of" },
    Text { content: " " },
    Text { content: "the" },
    Text { content: " " },
    Text { content: "list" },
    EndParagraph,
    StartParagraph { alignment: None, id: None },
    Text { content: "Back " },
    Text { content: "to" },
    Text { content: " t" },
    Text { content: "he top " },
    Text { content: "level" },
    Text { content: "." },
    EndParagraph,
    EndUnorderedListItem,
    EndUnorderedListItem,
    EndDocument,
  ],
  terminal: Ok,
}
